--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2 class="text-4xl font-bold text-blue-800 mb-4 border-b-4 border-blue-600 pb-2">DO CAMPO À MESA</h2>
             <div class="flex flex-col md:flex-row items-center md:space-x-8">
                 <div class="md:w-1/3 flex justify-center mb-6 md:mb-0">
-                    <img src="https://placehold.co/300x200/ADD8E6/000000?text=Gastronomia" alt="Ilustração de Gastronomia" class="rounded-lg shadow-md">
+                    <img src="Gastronomia.png" alt="Ilustração de Gastronomia" class="rounded-lg shadow-md">
                 </div>
                 <div class="md:w-2/3 text-lg leading-relaxed">
                     <p>Gastronomia com finalidade de juntar tradições e aproximar costumes. Diversos pratos típicos para você aproveitar essa imersão cultural!</p>
@@ -53,8 +53,8 @@
             <h2 class="text-4xl font-bold text-purple-800 mb-4 border-b-4 border-purple-600 pb-2">DANÇAS TRADICIONAIS</h2>
             <div class="flex flex-col md:flex-row items-center md:space-x-8">
                 <div class="md:w-1/3 flex justify-center mb-6 md:mb-0">
-                    <img src="https://placehold.co/300x200/DDA0DD/000000?text=Danças" alt="Ilustração de Danças Tradicionais" class="rounded-lg shadow-md">
-                </div>
+                    <img src="Design sem nome.png" alt="Ilustração de Danças Tradicionais" class="rounded-lg shadow-md">
+                </div> 
                 <div class="md:w-2/3 text-lg leading-relaxed">
                     <p>Rodas de danças tradicionais para aproximação cultural. Aproveite para mostrar seus passos no palco!</p>
                 </div>
@@ -65,7 +65,7 @@
             <h2 class="text-4xl font-bold text-yellow-800 mb-4 border-b-4 border-yellow-600 pb-2">MUSEU DO CAMPO</h2>
             <div class="flex flex-col md:flex-row items-center md:space-x-8">
                 <div class="md:w-1/3 flex justify-center mb-6 md:mb-0">
-                    <img src="https://placehold.co/300x200/FFD700/000000?text=Museu" alt="Ilustração de Museu do Campo" class="rounded-lg shadow-md">
+                    <img src="Museu.png" alt="Ilustração de Museu do Campo" class="rounded-lg shadow-md">
                 </div>
                 <div class="md:w-2/3 text-lg leading-relaxed">
                     <p>No museu do campo você encontrará uma imersão com alguns dos mais antigos itens encontrados, a fim de passar a cultura às gerações futuras.</p>
