--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <header class="bg-green-700 text-white py-4 shadow-md rounded-b-lg">
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
             <div class="flex items-center mb-4 md:mb-0">
-                <img src="Festa Cultural 5.png"Logo Festa Cultural - Campo" class="h-20 w-20 mr-4 rounded-full border-2 border-white object-cover">
+                <img src="Festa Cultural 5 (1).png" alt="Logo Festa Cultural - Campo" class="h-20 w-20 mr-4 rounded-full border-2 border-white object-cover">
                 <div>
                     <h1 class="text-4xl font-extrabold">FESTA CULTURAL</h1>
-                    <p class="text-lg font-light">conectividade de tradições</p>
+                    <p class="text-lg font-light">"Conectividade de Tradições"</p>
                 </div>
             </div>
 
@@ -56,7 +56,7 @@
                     <img src="Design sem nome.png" alt="Ilustração de Danças Tradicionais" class="rounded-lg shadow-md">
                 </div> 
                 <div class="md:w-2/3 text-lg leading-relaxed">
-                    <p>Rodas de danças tradicionais para aproximação cultural. Aproveite para mostrar seus passos no palco!</p>
+                    <p>Rodas de danças tradicionais para aproximação cultural. Aproveite para mostrar seus passos na pista!</p>
                 </div>
             </div>
         </section>
@@ -86,14 +86,14 @@
                     <ul class="list-none p-0 text-lg">
                         <li class="mb-2 flex items-center"><span class="mr-2 text-xl">&#9993;</span> Email: contato@festacultural.com</li>
                         <li class="mb-2 flex items-center"><span class="mr-2 text-xl">&#9742;</span> Telefone: (XX) XXXX-XXXX</li>
-                        <li class="flex items-center"><span class="mr-2 text-xl">&#128205;</span> Endereço: Rua da Cultura, 123, Cidade</li>
+                        <li class="flex items-center"><span class="mr-2 text-xl">&#128205;</span> Endereço: Salão Comunitário do bairro Faculdade</li>
                     </ul>
                 </div>
                 <div>
                     <h3 class="text-2xl font-semibold text-gray-700 mb-3">Datas e Horários</h3>
                     <ul class="list-none p-0 text-lg">
-                        <li class="mb-2 flex items-center"><span class="mr-2 text-xl">&#128197;</span> Dia: 15 de Junho de 2025</li>
-                        <li class="flex items-center"><span class="mr-2 text-xl">&#128337;</span> Horário: 10:00 - 22:00</li>
+                        <li class="mb-2 flex items-center"><span class="mr-2 text-xl">&#128197;</span> Dia: 05/06</li>
+                        <li class="flex items-center"><span class="mr-2 text-xl">&#128337;</span> Horário: Início às 14h</li>
                     </ul>
                 </div>
             </div>
