--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="bg-green-700 text-white py-4 shadow-md rounded-b-lg">
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
             <div class="flex items-center mb-4 md:mb-0">
-                <img src=" alt="Logo Festa Cultural - Campo" class="h-20 w-20 mr-4 rounded-full border-2 border-white object-cover">
+                <img src="Festa Cultural 5 (3).png" alt="Logo Festa Cultural - Campo" class="h-20 w-20 mr-4 rounded-full border-2 border-white object-cover">
                 <div>
                     <h1 class="text-4xl font-extrabold">FESTA CULTURAL</h1>
                     <p class="text-lg font-light">"Conectividade de Tradições"</p>
